from lidar.Emitter import Emitter

class LaserSafety:
    @staticmethod
    def assessClass(emitter):
        return "Class X"